--- a/packages.config
+++ b/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="AvalonEdit" version="5.0.1-pre" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net451" />
+  <package id="LightPaper.Infrastructure" version="0.0.1-pre" targetFramework="net451" />
+  <package id="LightPaper.ResourceSatellite" version="0.0.1-pre" targetFramework="net451" />
   <package id="MahApps.Metro" version="0.14.0-ALPHA98" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
   <package id="Prism" version="5.0.0" targetFramework="net451" />
