--- a/LightPaper.Plugins.SessionManager.csproj
+++ b/LightPaper.Plugins.SessionManager.csproj
@@ -42,13 +42,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\AvalonEdit.5.0.1-pre\lib\Net40\ICSharpCode.AvalonEdit.dll</HintPath>
     </Reference>
-    <Reference Include="LightPaper.Infrastructure, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="LightPaper.Infrastructure, Version=0.0.3.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\LightPaper.Infrastructure.0.0.2-pre\lib\LightPaper.Infrastructure.dll</HintPath>
+      <HintPath>..\..\packages\LightPaper.Infrastructure.0.0.4-pre\lib\LightPaper.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="LightPaper.ResourceSatellite, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>packages\LightPaper.Infrastructure.0.0.2-pre\lib\LightPaper.ResourceSatellite.dll</HintPath>
+      <HintPath>..\..\packages\LightPaper.Infrastructure.0.0.4-pre\lib\LightPaper.ResourceSatellite.dll</HintPath>
     </Reference>
     <Reference Include="MahApps.Metro">
       <HintPath>..\..\packages\MahApps.Metro.0.14.0-ALPHA98\lib\net45\MahApps.Metro.dll</HintPath>
@@ -104,6 +104,9 @@
     <Reference Include="Serilog.FullNetFx, Version=1.3.0.0, Culture=neutral, PublicKeyToken=24c2f752a8e58a10, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>packages\Serilog.1.3.34\lib\net45\Serilog.FullNetFx.dll</HintPath>
+    </Reference>
+    <Reference Include="SmartFormat">
+      <HintPath>..\..\packages\SmartFormat.NET.1.1.0.0\lib\net35-Client\SmartFormat.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
