--- a/packages.config
+++ b/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="AvalonEdit" version="5.0.1-pre" targetFramework="net451" />
   <package id="CommonServiceLocator" version="1.2" targetFramework="net451" />
-  <package id="LightPaper.Infrastructure" version="0.0.2-pre" targetFramework="net451" />
+  <package id="LightPaper.Infrastructure" version="0.0.4-pre" targetFramework="net451" />
   <package id="MahApps.Metro" version="0.14.0-ALPHA98" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net451" />
   <package id="Prism" version="5.0.0" targetFramework="net451" />
@@ -14,4 +14,5 @@
   <package id="Puppy" version="0.0.2.2" targetFramework="net451" />
   <package id="Serilog" version="1.3.34" targetFramework="net451" />
   <package id="Serilog.Extras.AppSettings" version="1.3.34" targetFramework="net451" />
+  <package id="SmartFormat.NET" version="1.1.0.0" targetFramework="net451" />
 </packages>
